--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <title>Sketch</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 </head>
 <body>
-    <h1 id="title">Sketch</h1>
+    <h1 id="title">SKETCH</h1>
 
     <div class="buttonContainer">
-        <button id="startButton" class="button">Start</button>
         <input type="color" id="color">
+        <input type="number" min="1" max="16" value="16" placeholder="1 to 16" id="squaresSelector" class="button">
+        <button id="startButton" class="button">START</button>
     </div>
     
 
